# Go-Quant

./: .clang-format  .clangd  ASSIGNMENT_CHECKLIST.md  CMakeLists.txt  GAP_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_STATUS.md  QUICK_VIDEO_GUIDE.md  README.md  REMAINING_WORK.md  VIDEO_RECORDING_GUIDE.md  setup.bat  setup.ps1  test_debug.cpp
.github/workflows/: build-test.yml  ci.yml
benchmarks/: README.md  bench_runner.cpp  latency_benchmark.cpp  performance_benchmark.cpp  throughput_benchmark.cpp
cmake/modules/: FindDependencies.cmake
config/grafana/: dashboard.json
config/prometheus/: alert_rules.yml
docker/: Dockerfile  entrypoint.sh
docs/: OPERATIONS.md  WEBSOCKET_API.md
examples/: demo.cpp  simple_client.cpp
include/: optional
include/engine/: fee_model.h  matching_algorithm.h  matching_engine.h  order_book.h  persistence.h
include/network/: listener.h  session.h
include/prometheus/: counter.h  exposer.h  family.h  gauge.h  histogram.h  registry.h
include/utils/: fee_model.h  logging.h  memory_pool.h  metrics.h  metrics_manager.h  order_pool.h  rate_limiter.h  ring_buffer.h  system_metrics.h  time_utils.h
proto/: messages.proto
scripts/: install_cmake_choco.ps1
src/: main.cpp
src/engine/: matching_algorithm.cpp  matching_engine.cpp  order_book.cpp
src/network/: listener.cpp  session.cpp
src/utils/: logging.cpp  metrics.cpp  time_utils.cpp
tests/integration/: test_end_to_end.cpp
tests/unit/: test_advanced_orders.cpp  test_bbo.cpp  test_fifo.cpp  test_market_incremental.cpp  test_matching_algorithm.cpp  test_matching_engine.cpp  test_memory_pool.cpp  test_metrics.cpp  test_minimal.cpp  test_modify_order.cpp  test_order_book.cpp  test_performance.cpp  test_persistence.cpp  test_rate_limit.cpp  test_trigger_orders.cpp  test_wal.cpp  test_wal_modify.cpp
tools/: automated_demo.py  demo_for_video.py  example_ws_client.py  ws_integration_test.py
tools/scripts/: run_benchmarks.sh  run_tests.sh
tools/tu/: headers_tu.cpp  persistence_header_tu.cpp  prometheus_third_party_tu.cpp
